# json-tools

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml  release-please.yml  release.yml
docs/: index.md
json_tools/: __main__.py  converters.py
src/json_tools/: __init__.py  __main__.py  _version.py  converters.py  json_ops.py
tests/: test_json_tools.py
