[project]
name = "json-tools"
version = "0.1.0"
description = "Unified toolkit for converting, diffing, and formatting JSON/CSV/XML data."
authors = [
    { name = "Kris Armstrong", email = "kris.armstrong@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "coverage[toml]>=7.4",
]
validation = [
    "jsonschema>=4.0",
]
dev = [
    "nox>=2024.4.15",
]

[project.urls]
Homepage = "https://github.com/krisarmstrong/json-tools"
"Bug Tracker" = "https://github.com/krisarmstrong/json-tools/issues"

[project.scripts]
json-tools = "json_tools.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --showlocals"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["json_tools"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
extend-exclude = ["build", "dist", ".venv", "venv", ".tox", ".mypy_cache", ".ruff_cache"]

[tool.black]
line-length = 100
